force-app/main/default/objects/Comparable__c/fields/Base_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Base_Opportunity__c</fullName>
    <label>Base Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comparables</relationshipLabel>
    <relationshipName>Comparables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>