force-app/main/default/objects/Comparable__c/fields/Comparable_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comparable Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comparables (Comparable Opportunity)</relationshipLabel>
    <relationshipName>Comparables1</relationshipName>
    <type>Lookup</type>
</CustomField>